--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,41 +1,36 @@
-apply plugin: 'com.android.library'
-
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
+
+
+
     defaultConfig {
-//        applicationId "com.tigertian.bluetoothprinter"
+        applicationId "com.tigertian.test"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 3
-        versionName "0.0.3"
+        versionCode 1
+        versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets {
-        main {
-            java {
-                exclude 'com/tigertian/bluetoothprinter/test/**'
-                exclude 'com/tigertian/bluetoothprinter/MainActivity.java'
-            }
-        }
-    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'de.greenrobot:eventbus:2.2.1'
+    implementation project(':app')
 }
